@@ -898,6 +898,11 @@ void CanvasControllerBase::handleWheel(QWheelEvent *event)
 			event, int(tools::QuickAdjustType::ColorV), toolAllowsColorPick(),
 			deltaY);
 		break;
+	case CanvasShortcuts::TOGGLE_ERASER:
+	case CanvasShortcuts::TOGGLE_ERASE_MODE:
+	case CanvasShortcuts::TOGGLE_RECOLOR_MODE:
+		Q_EMIT canvasShortcutActionActivated(match.actionName());
+		break;
 	default:
 		qWarning("Unhandled mouse wheel canvas shortcut %u", match.action());
 		break;
@@ -977,6 +982,11 @@ void CanvasControllerBase::handleKeyPress(QKeyEvent *event)
 					.setDragMode(ViewDragMode::Started)
 					.setResetDragPoints()
 					.setResetDragRotation());
+			break;
+		case CanvasShortcuts::TOGGLE_ERASER:
+		case CanvasShortcuts::TOGGLE_ERASE_MODE:
+		case CanvasShortcuts::TOGGLE_RECOLOR_MODE:
+			Q_EMIT canvasShortcutActionActivated(keyMatch.actionName());
 			break;
 		default:
 			CanvasShortcuts::Match mouseMatch =
@@ -1691,6 +1701,11 @@ void CanvasControllerBase::penPressEvent(
 			break;
 		case CanvasShortcuts::LAYER_PICK:
 			penMode = PenMode::Layerpick;
+			break;
+		case CanvasShortcuts::TOGGLE_ERASER:
+		case CanvasShortcuts::TOGGLE_ERASE_MODE:
+		case CanvasShortcuts::TOGGLE_RECOLOR_MODE:
+			Q_EMIT canvasShortcutActionActivated(match.actionName());
 			break;
 		default:
 			qWarning(
